# YourCelebVoice

./: README.md  gathering_data.ipynb  pyproject.toml  sol.ipynb  sol.py
datajson/: controller.py  process_chunk.py  test.ipynb
frontend/my-app/src/: App.css  App.js
src/: config.py  main.py  sol.py  utils.py
